# test_111

./: 404.html  index.html  main.py  mkdocs.yml  pyproject.toml
my_universal_backend/: cli_interface.py  core.py  http_server.py  main.py
my_universal_backend/common/: interfaces.py
my_universal_backend/domain/: services.py
my_universal_backend/infrastructure/adapters/: adapter_factory.py  data_repository.py  external_service.py
src/test_111/: __init__.py  adapter.py  cli.py  core.py  funs.py  log.py  mock.py  server.py
src/test_111.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
